# sfml_examples

FFT/: CMakeLists.txt  FFT.cpp  FFT.h  FFT.kdev4  main.cpp
FFT/.kdev4/: FFT.kdev4
FireworksSFML-master/: FireworksSFML-master.kdev4
FireworksSFML-master/.kdev4/: FireworksSFML-master.kdev4
FireworksSFML-master/src/: Particle.cpp  Source.cpp
Harmonograph/: CMakeLists.txt  main.cpp  readme.md
Harmonograph/.kdev4/: Harmonograph.kdev4
Harmonograph/src/: Harmonograph.cpp  Harmonograph.h  Pendulum.cpp  Pendulum.h  Slider.cpp  Slider.h  Utility.cpp  Utility.h
Spirographe/: CMakeLists.txt  Spirographe.kdev4  main.cpp  readme.md
Spirographe/.kdev4/: Spirographe.kdev4
Spirographe/src/: Line.h  Spirographe.vcxproj  Spirographe.vcxproj.filters  Triangulation.cpp  Triangulation.h  Utility.cpp  Utility.h
complete/: CMakeLists.txt  main.cpp
complete/.kdev4/: complete.kdev4
qcustomplot/: axistagview.cpp  axistagview.h  scrollaxisrangeview.cpp  scrollaxisrangeview.h  scrollaxisrangeview.ui
sfml-plot/: CMakeLists.txt  flow  main.cpp  sfml-plot.kdev4  test  thickness_1  thickness_1curve  thickness_2  thickness_2curve
sfml-plot/.kdev4/: sfml-plot.kdev4
sfml-plot/src/: axis.cpp  axis.h  curve.cpp  grid.h  line.cpp  plot.cpp
sfml-view-coordinate/: CMakeLists.txt  main.cpp
sfml-view-coordinate/.kdev4/: sfml-view-coordinate.kdev4
sfml_playground/: CMakeLists.txt  root-realtime-plot  root-realtime-plot.cpp
