CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ENABLE_LANGUAGE(CXX)

PROJECT(FFT CXX)

#FIND_PACKAGE(SFML 2.0 REQUIRED system window graphics)

INCLUDE_DIRECTORIES(
  ${SFML_INCLUDE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
)

# FOREACH(MODULE src include)
#   FILE(GLOB MODULES_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/${MODULE}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/${MODULE}/*.h)
#   SET(SOURCES ${MODULES_SOURCES} ${SOURCES})
# ENDFOREACH(MODULE)

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp FFT.cpp ${SOURCES} ${VERSION_FILE})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}  sfml-window sfml-system sfml-graphics -lsfml-audio)
  #${SFML_LIBRARIES})

# debug setting  
SET(CMAKE_BUILD_TYPE "Debug")  
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")  
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")    
